tests/compile_fail/no_clone.stderr
error[E0277]: the trait bound `no_generic::S: Clone` is not satisfied
   --> tests/compile_fail/no_clone.rs:9:9
    |
9   |         clone s,
    |         ^^^^^^^ the trait `Clone` is not implemented for `no_generic::S`
    |
note: required by `clone`
   --> $RUST/core/src/clone.rs
    |
    |     fn clone(&self) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `no_derive::S<{integer}>: Clone` is not satisfied
   --> tests/compile_fail/no_clone.rs:24:9
    |
24  |         clone s,
    |         ^^^^^^^ the trait `Clone` is not implemented for `no_derive::S<{integer}>`
    |
note: required by `clone`
   --> $RUST/core/src/clone.rs
    |
    |     fn clone(&self) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NonClone: Clone` is not satisfied
   --> tests/compile_fail/no_clone.rs:42:9
    |
42  |         clone s,
    |         ^^^^^^^
    |         |
    |         expected an implementor of trait `Clone`
    |         help: consider borrowing here: `&clone s`
    |
note: required because of the requirements on the impl of `Clone` for `no_impl::S<NonClone>`
   --> tests/compile_fail/no_clone.rs:37:14
    |
37  |     #[derive(Clone)]
    |              ^^^^^
note: required by `clone`
   --> $RUST/core/src/clone.rs
    |
    |     fn clone(&self) -> Self;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
